<resources>
    <string name="app_name">EMA</string>
    <string name="add_employee">Add Employee</string>
    <string name="profile_pic">Profile Picture</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_department">Enter Department</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_phone">Enter Phone</string>
    <string name="save">Save</string>
    <string name="more_options">More Options</string>
    <string name="employee_manager">Employee Manager</string>
    <string name="manage_track_employees_easily"><![CDATA[Manage & track employees easily]]></string>
    <string name="create_account">Create Account</string>
    <string name="login">Login</string>
    <string name="continue_without_account">Continue without account</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="department">Department</string>
    <string name="employee_name">Employee Name</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="create">Create</string>
    <string name="account">Account</string>
    <string name="fill_your_information_below_or_register_with_your_social_account">Fill your information below or\nregister with your social account</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="or_signup_with">Or signup with</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="confirm_password">Confirm password</string>
    <string name="welcome_to_home_page">Welcome to Home Page</string>
    <string name="back">Back</string>
    <string name="we_missed_your_login_to_continue_your_journey_with_us">We missed your login to continue your journey with us</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="or_login_with">Or login with</string>
    <string name="doesn_t_have_an_account">Doesn\'t have an account?</string>
    <string name="welcome">Welcome</string>
    <string name="md_kajam_all_koraish">MD Kajam-all Koraish</string>
    <string name="kajam_amad_06_20_dipti_com_bd">kajam.amad-06-20@dipti.com.bd</string>
    <string name="search">Search</string>
    <string name="add">Add</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="guest">Guest</string>
    <string name="app_logo">App Logo</string>
</resources>